styles.css
body {
    margin: 0px;
    color: rgb(255, 255, 255);
    font-family: sans-serif;
}

.mainContainer {
    display: flex;
    width: 100vw;
}

.subContainer{
    width: 40%;
    
}

.subContainer2 {
    width: 60%;
    display: flex;
    flex-direction: column;
    
}

.subContainer2 > div {
    width: 100%;
}
#ennaBG {
    position: relative;
    width: 100%;
    height: 100vh;
    overflow: hidden;
    

}

#ennaPic {
    object-fit: cover;
    width: 100%;
    height: 100%;
    filter:brightness(85%)
}

#logo {
    position: absolute;
    color: white;
    font-size: 2.5rem;
    background-color: rgba(0, 0, 0, 0.596);
    top: 50%;
    left:0;
    right:0;
    margin-top: -26%;
    width: 100%;
    padding-top: 10%;
    padding-bottom: 10%;
    text-align: center;
    z-index: 2;
}

#form {
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-grow:1;
    background-color: rgb(31, 28, 32);
    border-bottom: 1px solid rgb(255, 255, 255);
    border-top: 1px solid rgb(255, 255, 255);
    box-sizing: border-box;

}

form {
    margin-left: 5%;
    padding: 60px 20px;
    border: none;
}

legend {
    font-size: 1.5rem;
    margin-left: -2.5px;
    margin-bottom: 20px;
}

fieldset {
    border: none;
    height: 30%;

}

.requiredStar {
    color: red;
}

input {
    color: white;
    background-color: rgb(31, 28, 32);
    font-size: 18px;
    border: none;
    border-bottom: 1px solid white;
    box-sizing: border-box;
    padding: 5px 0;
    width:100%;
}


input:focus {
    outline: none;
    border: 1px solid rgb(82, 150, 82);
}

input:invalid:focus {
   border: 1px solid red;
}


label {
    display: block;
}


.formSection {
    display: flex;
    align-items: center;
    gap: 10%;
}

.formPart {
    display: flex;
    flex-direction: column;
    gap: 5px;
}



#header,
#bottomForm {
    flex-grow: 1;
    background-color:rgb(31, 28, 32);
}

#bottomForm {
    box-sizing: border-box;
    padding: 3%;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
}

button {
    margin-top: 10px;
    width: 30%;
    height: 20%;
    color: white;
    background-color: rgb(31,28,32);
    border:1px solid rgb(255, 255, 255);
    border-radius: 5px;
    font-size: 1.2rem;
}

#header {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    
}

h2 {
    width: 80%;
    font-size: 2.5rem;
}

a {
    color: rgb(211, 152, 223);
}

